# bazel-rules-js-cypress-issue

./: README.md
apps/frontend-e2e/: BUILD.bazel  tsconfig.json
apps/frontend-e2e/src/e2e/: app.spec.ts
